--- a/Blogg/addPost.xaml
+++ b/Blogg/addPost.xaml
@@ -8,7 +8,6 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:local="clr-namespace:Blogg"
 	xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    xmlns:rich="clr-namespace:C1.Phone.RichTextBox;assembly=C1.Phone.RichTextBox"
 	toolkit:TiltEffect.IsTiltEnabled="True"
 	FontFamily="{StaticResource PhoneFontFamilyNormal}"
 	FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -47,7 +46,7 @@
 	</toolkit:TransitionService.NavigationOutTransition>
 
 	<!--LayoutRoot is the root grid where all page content is placed-->
-	<Grid x:Name="LayoutRoot">
+	<Grid x:Name="LayoutRoot" Background="White">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="*"/>
@@ -56,15 +55,14 @@
 		<!--TitlePanel contains the name of the application and page title-->
 
 		<!--ContentPanel - place additional content here-->
-		<Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-			<StackPanel Orientation="Vertical">
+		<Grid x:Name="ContentPanel" Grid.Row="1" Margin="0">
+			<StackPanel x:Name="mainPanel" Orientation="Vertical">
 				<toolkit:PhoneTextBox Hint="enter title text" x:Name="titleTextBox"
-						BorderBrush="Transparent" SelectionForeground="White" Foreground="Black" Background="Transparent" VerticalAlignment="Top" BorderThickness="0" />
-				<toolkit:ListPicker x:Name="listPicker" Margin="0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#77000000" VerticalAlignment="Top" BorderThickness="0"/>
+						BorderBrush="Transparent" SelectionForeground="White" Foreground="Black" Background="Transparent" VerticalAlignment="Top" BorderThickness="0" Height="60" />
+				<toolkit:ListPicker x:Name="listPicker" Margin="8,0,0,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Black" VerticalAlignment="Top" BorderThickness="0"/>
 				<ScrollViewer Height="500" >
-					<toolkit:PhoneTextBox Hint="enter content" x:Name="contentTextBox" SelectionForeground="White" Foreground="Black" Background="Transparent" AcceptsReturn="True" TextWrapping="Wrap" BorderThickness="3" VerticalScrollBarVisibility="Visible" BorderBrush="#BF000000" />
+					<toolkit:PhoneTextBox Hint="enter content" x:Name="contentTextBox" SelectionForeground="White" Foreground="Black" Background="Transparent" AcceptsReturn="True" TextWrapping="Wrap" BorderThickness="0" VerticalScrollBarVisibility="Visible" BorderBrush="#BF000000" />
 				</ScrollViewer>
-                <ScrollViewer Height="100" VerticalAlignment="Bottom"/>
             </StackPanel>
 		</Grid>
 	</Grid>
