--- a/Blogg/addPost.xaml
+++ b/Blogg/addPost.xaml
@@ -13,7 +13,8 @@
 	FontSize="{StaticResource PhoneFontSizeNormal}"
 	Foreground="{StaticResource PhoneForegroundBrush}"
 	SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
-	mc:Ignorable="d" d:DesignHeight="728" d:DesignWidth="480">
+	mc:Ignorable="d" d:DesignHeight="696" d:DesignWidth="480"
+    shell:SystemTray.IsVisible="True">
 	<phone:PhoneApplicationPage.Resources>
 		<local:isFinishedNotifier x:Key="isFinishedNotifierDataSource"/>
 	</phone:PhoneApplicationPage.Resources>
@@ -63,7 +64,7 @@
 				<toolkit:PhoneTextBox Hint="enter title text" x:Name="titleTextBox"
 						BorderBrush="Transparent" SelectionForeground="White" Foreground="Black" Background="Transparent" VerticalAlignment="Top" BorderThickness="0" Height="65" />
 				<toolkit:ListPicker x:Name="listPicker" Margin="8,0,0,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Black" VerticalAlignment="Top" BorderThickness="0"/>
-				<ScrollViewer x:Name="contentScroll" Height="470" >
+				<ScrollViewer x:Name="contentScroll" Height="440" >
 					<toolkit:PhoneTextBox Hint="enter content" x:Name="contentTextBox" SelectionForeground="White" Foreground="Black" Background="Transparent" AcceptsReturn="True" TextWrapping="Wrap" BorderThickness="0" VerticalScrollBarVisibility="Visible" BorderBrush="#BF000000" TextInputStart="contentTextBox_TextInputStart" />
 				</ScrollViewer>
 				<ScrollViewer x:Name="scrollViewer" Height="120" Margin="10,0" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Visible"/>
