--- a/Blogg/postPage.xaml
+++ b/Blogg/postPage.xaml
@@ -15,7 +15,7 @@
 	<phone:PhoneApplicationPage.ApplicationBar>
 		<shell:ApplicationBar BackgroundColor="OrangeRed" >
 			<shell:ApplicationBarIconButton IconUri="/icons/appbar.delete.rest.png" Text="delete" Click="deleteClick"/>
-			<shell:ApplicationBarIconButton IconUri="/icons/appbar.pin.png" Text="pin"/>
+			<!--<shell:ApplicationBarIconButton IconUri="/icons/appbar.pin.png" Text="pin"/>-->
 		</shell:ApplicationBar>
 	</phone:PhoneApplicationPage.ApplicationBar>
 
