--- a/Blogg/MainPage.xaml
+++ b/Blogg/MainPage.xaml
@@ -14,7 +14,7 @@
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="Portrait"  Orientation="Portrait">
+    SupportedOrientations="PortraitOrLandscape"  Orientation="Portrait">
     
 	<phone:PhoneApplicationPage.ApplicationBar>
 		<shell:ApplicationBar BackgroundColor="OrangeRed">
